log
Sun, May 18, 2025  1:09:02 PM: 
 sudoku.c | 64 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 63 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:89:13: error: too few arguments to function 'verificar_fila'
     return (verificar_fila(n->sudo) && verificar_columna(n->sudo) && verificar_cuadro(n->sudo));
             ^~~~~~~~~~~~~~
sudoku.c:46:5: note: declared here
 int verificar_fila(int sudo[9][9], int fila, int valor){
     ^~~~~~~~~~~~~~
sudoku.c:89:40: error: too few arguments to function 'verificar_columna'
     return (verificar_fila(n->sudo) && verificar_columna(n->sudo) && verificar_cuadro(n->sudo));
                                        ^~~~~~~~~~~~~~~~~
sudoku.c:59:5: note: declared here
 int verificar_columna(int sudo[9][9], int columna, int valor){
     ^~~~~~~~~~~~~~~~~
sudoku.c:89:70: error: too few arguments to function 'verificar_cuadro'
     return (verificar_fila(n->sudo) && verificar_columna(n->sudo) && verificar_cuadro(n->sudo));
                                                                      ^~~~~~~~~~~~~~~~
sudoku.c:72:5: note: declared here
 int verificar_cuadro(int sudo[9][9], int fila, int columna, int valor){
     ^~~~~~~~~~~~~~~~
sudoku.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
Sun, May 18, 2025  1:21:52 PM: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 20/70
078efee
Sun, May 18, 2025  1:32:07 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
ee747fd
Sun, May 18, 2025  1:35:11 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
test.c: In function 'is_final':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
31f7af1
Sun, May 18, 2025  1:36:03 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
e8856ba
